--- a/main.html
+++ b/main.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     
     <title>Document</title>
+    <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <nav class="nav">
+        <nav class="nav" style="display: flex;">
             <a href="#">О нас</a>
             <a href="#">Проекты</a>
             <a href="#">Контакты</a>
@@ -31,6 +32,7 @@
 
         </main>
         <footer>
+            <p>социальные сети</p>
         </footer>
 </body>
 </html>
