--- a/main.html
+++ b/main.html
@@ -1,38 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
+
     <title>Document</title>
     <link rel="stylesheet" href="normalize.css">
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <header>
         <nav class="nav" style="display: flex;">
-            <a href="#">О нас</a>
-            <a href="#">Проекты</a>
-            <a href="#">Контакты</a>
+            <!-- <a href="http://127.0.0.1:5500/aboutUs.html">О нас</a> -->
+            <a href="#">Чернила</a>
+            <a href="#">Сервис</a>
+            <a href="#">Гарантии</a>
+            <a href="http://127.0.0.1:5500/%20production.html">Производство</a>
+            <a href="http://127.0.0.1:5500/contacts.html">Контакты</a>
         </nav>
-        <main>
-            <article class="">
-                <h3>Наши результаты</h3>
-                <p>Задача организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности играет важную роль в формировании новых предложений. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям.</p>
-            </article>
-            <article class="services">
-                <h3>Наши услуги</h3>
-                <p>Задача организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности играет важную роль в формировании новых предложений. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям.</p>
-            </article>
-            <article>
-                <h3>Кто мы такие</h3>
-                <p>Задача организации, в особенности же укрепление и развитие структуры обеспечивает широкому кругу (специалистов) участие в формировании новых предложений. Разнообразный и богатый опыт реализация намеченных плановых заданий требуют от нас анализа систем массового участия. Значимость этих проблем настолько очевидна, что сложившаяся структура организации представляет собой интересный эксперимент проверки форм развития. Задача организации, в особенности же постоянный количественный рост и сфера нашей активности играет важную роль в формировании новых предложений. Значимость этих проблем настолько очевидна, что начало повседневной работы по формированию позиции обеспечивает широкому кругу (специалистов) участие в формировании системы обучения кадров, соответствует насущным потребностям.</p>
-            </article>
+        <main class="main">
+            <section class="titul">
+                <h1>Нашаша задача - выполнить в срок заказ!!!</h1>
+                <button class="titul__button">производство</button>
+            </section>
 
         </main>
-        <footer>
-            <p>социальные сети</p>
+        <footer class="footer">
+            <div class="footer__contacts">
+                <img src="https://img.icons8.com/color/48/000000/clr_watch_2.png" />
+                <div>
+                    часы работы <br> Ежедневно:09:00 - 22:00</div>
+            </div>
+
+
+            </div>
+
+            <div class="footer__contacts">
+                <img src="https://img.icons8.com/color/48/000000/cottage.png" />
+                <div>наш адрес <br>Москва, ул.Лескова</div>
+
+            </div>
+            <div class="footer__contacts">
+                <img src="https://img.icons8.com/fluency/48/000000/phone-not-being-used.png" />
+                <div>телефон <br> +7(495)111-11-11</div>
+
+            </div>
         </footer>
 </body>
+
 </html>
