изменила состояние кнопки

--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
 
 <body>
     <header>
-        <nav class="nav" style="display: flex;">
+        <nav class="nav">
             <!-- <a href="http://127.0.0.1:5500/aboutUs.html">О нас</a> -->
             <a href="#">Чернила</a>
             <a href="#">Сервис</a>
@@ -23,10 +23,12 @@
         </nav>
         <main class="main">
             <section class="titul">
-                <h1>Нашаша задача - выполнить в срок заказ!!!</h1>
-                <button class="titul__button">производство</button>
+                <h1>Наша задача - выполнить заказ в срок!!!</h1>
+                <div class="titul__main">
+                    <button class="titul__button-main">производство</button>
+                </div>
             </section>
-
+           
         </main>
         <footer class="footer">
             <div class="footer__contacts">
