данные footer изменены

--- a/main.html
+++ b/main.html
@@ -33,8 +33,10 @@
         <footer class="footer">
             <div class="footer__contacts">
                 <img src="https://img.icons8.com/color/48/000000/clr_watch_2.png" />
+                
                 <div>
-                    часы работы <br> Ежедневно:09:00 - 22:00</div>
+                    <span>часы работы</span>
+                    <br> Ежедневно: 09:00 - 22:00</div>
             </div>
 
 
