--- a/main.html
+++ b/main.html
@@ -18,9 +18,10 @@
             <a href="#">Чернила</a>
             <a href="#">Сервис</a>
             <a href="#">Гарантии</a>
-            <a href="http://127.0.0.1:5500/%20production.html">Производство</a>
-            <a href="http://127.0.0.1:5500/contacts.html">Контакты</a>
+            <a href="http://127.0.0.1:5501/%20production.html">Производство</a>
+            <a href="http://127.0.0.1:5501/contacts.html">Контакты</a>
         </nav>
+    </header>
         <main class="main">
             <section class="titul">
                 <h1>Наша задача - выполнить заказ в срок!!!</h1>
@@ -28,7 +29,7 @@
                     <button class="titul__button-main">производство</button>
                 </div>
             </section>
-           
+        
         </main>
         <footer class="footer">
             <div class="footer__contacts">
